# qfilt

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  TODO  astyle.txt
data/: test.fastq.dos  test.fna.dos  test.qual.dos
src/: 454_filter.c  argparse.cpp  argparse.h  argparse.hpp  common.hpp  ifile.cpp  ifile.hpp  main.cpp  qfilt.cpp  seq.cpp  seq.h  seq.hpp  str.cpp  str.h  str.hpp  strtok.cpp  strtok.h  strtok.hpp  vec.h  vec.hpp  vec.tpp  vector.h  vector.tpp
